Agregado el formulario y las funciones para calcular el área del cuadrado

--- a/FigurasGeometricas/figuras.html
+++ b/FigurasGeometricas/figuras.html
@@ -8,6 +8,20 @@
     <script src="figuras.js"></script>
 </head>
 <body>
-    <h1>Hola muy buenas</h1>
+    <h1>Este es el primer taller del curso práctico de JavaScript</h1>
+
+    <section>
+        <h3>Calcular el área y perímetro de un cuadrado</h3>
+
+        <form action="">
+            <label for="txtAreaCuadrado">
+                Ingresa cuanto mide el lado de tu cuadrado:
+            </label>
+            <input type="number" id="txtAreaCuadrado">
+            <button type="button" id="btnPerimetro" onclick="CalcularPerimetroCuadrado()">Calcular el parímetro</button>
+            <button type="button" id="btnArea" onclick="CalcularAreaCuadrado()">Calcular el área</button>
+        </form>
+
+    </section>
 </body>
 </html>
